# sinedrops

./: .gitignore  CMakeLists.txt  README.md  genTags.sh
src/: AREnvelope.cpp  AREnvelope.hpp  Delay.cpp  Delay.hpp  Effect.hpp  Envelope.cpp  Envelope.hpp  GateInfo.hpp  Instrument.cpp  Instrument.hpp  MTime.cpp  MTime.hpp  MemLoopSequencer.cpp  MemLoopSequencer.hpp  MixTool.cpp  MixTool.hpp  Object.cpp  Object.hpp  RandSequencer.cpp  RenderInfo.hpp  RenderOptions.cpp  RenderOptions.hpp  RingBuffer.hpp  Sequencer.cpp  Sequencer.hpp  SineDrops.cpp  SineDrops.hpp  SineVoice.cpp  SineVoice.hpp  Synth.hpp  Voice.cpp  Voice.hpp  VoiceFactory.hpp  main.cpp
src/Effects/: Delay.cpp  Delay.hpp
src/Envelopes/: AREnvelope.hpp
src/Sequencers/: CursesSequencer.cpp  CursesSequencer.hpp  MemLoopSequencer.cpp  MemLoopSequencer.hpp  RandSequencer.cpp  RandSequencer.hpp
src/Synths/: SineSynth.cpp  SineSynth.hpp
src/Voices/: SineVoice.cpp  SineVoice.hpp  SineVoiceInfo.cpp  SineVoiceInfo.hpp
